# unit-splitter

./: CHANGELOG.md  README.md  shell.nix
cli/: Cargo.toml
cli/src/: main.rs
core/: CHANGELOG.md  Cargo.toml  build.rs
core/src/: group.rs  interval_tree.rs  inventory.pest  inventory.rs  lib.rs  notation.rustpeg  parse.rs  range.rs  request.rs  requests.pest  requests.rs  split.rs  syntax.rs  unit_requests.rs
gtk/: Cargo.toml
gtk/src/: main.rs  output.rs  procedure.rs
gtk/src/widgets/: mod.rs  request.rs  units.rs
web/: CHANGELOG.md  Cargo.toml  Makefile  fix-deploy.sh  generate-static-files.sh  upload.sh
web/src/: lib.rs  main.rs  requests.rs
web/static/: changelog.html  index.html  styles.css
