[package]
name = "unit-splitter-gtk"
version = "0.1.0"
authors = ["LeRoyce Pearson <leroycepearson@geemili.xyz>"]

[dependencies]
unit-splitter-core = { path = "../core" }
relm = "0.14"
relm-derive = "0.14"
relm-attributes = "0.14"

[dependencies.gtk]
version = "0.4"
features = ["v3_22"]

[features]
default = ["relm/unstable", "relm-attributes/unstable", "relm-derive/unstable"]
